# one_dynamixel

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
circuit/: 06_one_dynamixel.fzz  ttl2dxif.fzpz
cmake/: RunToolChain.cmake  TestToolChain.cmake
examples/: CMakeLists.txt  one_dynamixel.c
include/spi/spi/: communication.h  packet_byte.h
include/uart/uart/: communication.h
include/util/util/: byte.h  crc.h
src/: CMakeLists.txt
src/dynamixel/: CMakeLists.txt  dynamixel.c
src/dynamixel/include/dynamixel/: dynamixel.h
src/pico/: CMakeLists.txt  one_dynamixel.c
src/pico_communicator/: CMakeLists.txt  README.md  pico_communicator.c  pico_communicator_extra.c  pico_communicator_extra_host.c
src/pico_communicator/include/pico_communicator/: pico_communicator.h
src/spi/: CMakeLists.txt  communication.c
src/uart/: CMakeLists.txt  communication.c
src/uart/include/uart/: communication.h
src/util/: CMakeLists.txt  analyze_packet.c  byte.c  crc.c  packet_byte.c
src/util/include/util/: analyze_packet.h  crc.h  packet_byte.h
test/: CMakeLists.txt
test/dynamixel/: CMakeLists.txt  test_communicate_device.cpp  test_dynamixel.cpp  test_dynamixel_initialization.cpp  test_dynamixel_instruction.cpp  test_dynamixel_packet.cpp  test_dynamixel_read.cpp  test_dynamixel_write.cpp
test/dynamixel/mock/: CMakeLists.txt  mock_hardware_gpio.cpp  mock_pico_communicator.cpp
test/spi/: CMakeLists.txt  test_communication.c
test/uart/: CMakeLists.txt  test_communication.c  test_communication_runner.c  test_uart.c
test/util/: CMakeLists.txt  test_analyze_packet.cpp  test_byte.c  test_byte_runner.c  test_crc.c  test_crc.cpp  test_crc_runner.c  test_packet_byte.cpp  test_util.c
